2023-01-01  Michal Hoftich  <michal.h21@gmail.com>

	* tex4th-html4.tex (html4.4ht): set font size for \subsubsection 
	to be at least as big as the main text.
	https://puszcza.gnu.org.ua/bugs/?592

2022-12-30  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (nameref.4ht): fixed support for \\ in \caption.
	https://tex.stackexchange.com/a/670159/2891

2022-12-27  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathjax.tex (mathjax-latex-4ht.4ht): fixed use of \left and
	\right in a TOC.
	https://tex.stackexchange.com/a/669861/2891
	
2022-12-26  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (mdframed.4ht): prevent compilation error when we
	convert mdframed environment to picture and amsthm package is
	loaded.
	https://tex.stackexchange.com/a/669526/2891

	* tex4ht-4ht.tex (latex.4ht): declared \begin and \end as robust
	commands.
	https://tex.stackexchange.com/a/669675/2891

2022-12-24  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (mdframed.4ht): fixed support for Mdframed used
	inside of \Picture*.
	https://tex.stackexchange.com/a/669526/2891

	* tex4ht-html4.tex (html4.4ht): added support for the inclusion of
	MPS images.
	https://tex.stackexchange.com/a/669526/2891

2022-12-23  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): fixed paragraph handling in the
	tasks environment.
	https://tex.stackexchange.com/a/669437/2891

2022-12-21  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): use <mstyle> instead of <mrow> for
	\dfrac and \dbinom, because MathJax had issues with <mrow>
	https://tex.stackexchange.com/a/669031/2891
	
2022-12-20  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): use correct displayformat for
	\dfrac and \dbinom.
	https://tex.stackexchange.com/a/669031/2891

2022-12-17  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): removed large left margin from
	enumitem item with the Enumitem package.