@@ -2,7 +2,7 @@
 % Manually-maintained file, listing *.4ht files created by tex4ht-4ht.tex.
 % Read by tex4ht-cond4ht.
 %
-% Copyright 2016-2020 TeX Users Group    
+% Copyright 2016-2023 TeX Users Group    
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 %
