@@ -2,7 +2,7 @@
 % Compile 4 times: latex tex4ht-html4
 % Copy html4.4ht into the work directory before all but the last compilation.
 %
-% Copyright 2009-2022 TeX Users Group
+% Copyright 2009-2023 TeX Users Group
 % Copyright 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -65,7 +65,7 @@
 
 \<html4\><<<
 % html4.4ht (|version), generated from |jobname.tex
-% Copyright 2009-2022 TeX Users Group
+% Copyright 2009-2023 TeX Users Group
 % Copyright |CopyYear.1997. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
@@ -73,7 +73,7 @@
 
 \<html4-math\><<<
 % html4-math.4ht (|version), generated from |jobname.tex
-% Copyright 2009-2022 TeX Users Group
+% Copyright 2009-2023 TeX Users Group
 % Copyright |CopyYear.1999. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
